--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
         os: [ubuntu-latest]
         scala: [2.13.6, 2.12.14]
         java: [adopt@1.8]
-        platform: [jvm, js]
+        platform: [jvm]
+        exclude:
+          - java: adopt@1.8
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
